--- a/frontend/src/app/core/card-real-time/card-real-time.component.html
+++ b/frontend/src/app/core/card-real-time/card-real-time.component.html
@@ -14,13 +14,15 @@
     <h2 class="text-2xl font-bold">
       <div [ngSwitch]="tipoDato">
         <!-- Si es humedad -->
-        <h2 *ngSwitchCase="'humidity'" class="text-2xl font-bold">{{ dataCardProgress }}</h2>
+        <div *ngSwitchCase="'humidity'" class="text-2xl font-bold">{{ humidity || 'Cargando...' }}</div>
+
 
         <!-- Si es temperatura -->
         <h2 *ngSwitchCase="'temperature'" class="text-2xl font-bold">{{ temperature }}</h2>
 
         <!-- Si es hora actual -->
         <h2 *ngSwitchCase="'horaActual'" class="text-2xl font-bold">{{ currenTime }}</h2>
+
 
         <!-- Si es consumo
         <h2 *ngSwitchCase="'consumo'" class="text-2xl font-bold">{{ consumo }}</h2>-->
