--- a/frontend/src/app/routes/landing-page/landing-page.component.html
+++ b/frontend/src/app/routes/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<body class="bg-gray-50">
+<body class="bg-gray-50 ">
   <div class="relative overflow-hidden">
     <!-- Header -->
     <header class="absolute inset-x-0 top-0 z-50 px-8 py-4 bg-white shadow-md">
@@ -24,7 +24,7 @@
       <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between px-6 py-16 lg:py-24 lg:px-16">
 
         <div class="lg:w-1/2 space-y-6 text-center lg:text-left prose">
-          <h1 class="font-bold leading-tight text-gray-900  animate-electric">Transforma tu hogar, optimiza tu energía.</h1>
+          <h1 class="font-bold leading-tight text-gray-900 animate-electric">Transforma tu hogar, optimiza tu energía.</h1>
           <p class="mt-4 text-gray-700">Obtén alertas personalizadas y recomendaciones para reducir tu huella de carbono y ahorrar en costos de energía. Aprende a optimizar el uso de tus electrodomésticos y proyecta tus futuros gastos con base en tus hábitos actuales.</p>
           <a href="#Services" class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover">Quiero saber más</a>
         </div>
@@ -49,7 +49,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z" />
               </svg>
             </div>
-            <h3 class="mt-6 font-semibold text-gray-900">Proyección de costos</h3>
+            <h3 class="mt-1 font-semibold text-gray-900">Proyección de costos</h3>
             <p class="mt-2 text-gray-600">Proyecta tus gastos futuros y descubre cómo pequeños cambios pueden generar grandes ahorros a largo plazo.</p>
           </div>
 
@@ -59,7 +59,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 9.75v6.75m0 0-3-3m3 3 3-3m-8.25 6a4.5 4.5 0 0 1-1.41-8.775 5.25 5.25 0 0 1 10.233-2.33 3 3 0 0 1 3.758 3.848A3.752 3.752 0 0 1 18 19.5H6.75Z" />
               </svg>
             </div>
-            <h3 class="mt-6 font-semibold text-gray-900">Reducción de la huella de carbono</h3>
+            <h3 class="mt-1 font-semibold text-gray-900">Reducción de la huella de carbono</h3>
             <p class="mt-2 text-gray-600">Identifica áreas de mejora para reducir tu impacto ambiental sin sacrificar comodidad.</p>
           </div>
 
@@ -69,7 +69,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 0 1 6 3.75h2.25A2.25 2.25 0 0 1 10.5 6v2.25a2.25 2.25 0 0 1-2.25 2.25H6a2.25 2.25 0 0 1-2.25-2.25V6ZM3.75 15.75A2.25 2.25 0 0 1 6 13.5h2.25a2.25 2.25 0 0 1 2.25 2.25V18a2.25 2.25 0 0 1-2.25 2.25H6A2.25 2.25 0 0 1 3.75 18v-2.25ZM13.5 6a2.25 2.25 0 0 1 2.25-2.25H18A2.25 2.25 0 0 1 20.25 6v2.25A2.25 2.25 0 0 1 18 10.5h-2.25a2.25 2.25 0 0 1-2.25-2.25V6ZM13.5 15.75a2.25 2.25 0 0 1 2.25-2.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-2.25A2.25 2.25 0 0 1 13.5 18v-2.25Z" />
               </svg>
             </div>
-            <h3 class="mt-6 font-semibold text-gray-900">Optimización del uso de dispositivos</h3>
+            <h3 class="mt-1 font-semibold text-gray-900">Optimización del uso de dispositivos</h3>
             <p class="mt-2 text-gray-600">Aprovecha las horas de menor consumo energético para ahorrar aún más.</p>
           </div>
 
@@ -79,7 +79,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0 1 18 16.5h-2.25m-7.5 0h7.5m-7.5 0-1 3m8.5-3 1 3m0 0 .5 1.5m-.5-1.5h-9.5m0 0-.5 1.5m.75-9 3-3 2.148 2.148A12.061 12.061 0 0 1 16.5 7.605" />
               </svg>
             </div>
-            <h3 class="mt-6 font-semibold text-gray-900">Monitoreo en tiempo real</h3>
+            <h3 class="mt-1 font-semibold text-gray-900">Monitoreo en tiempo real</h3>
             <p class="mt-2 text-gray-600">Visualiza al instante el consumo energético de todos tus dispositivos desde cualquier lugar.</p>
           </div>
 
@@ -89,7 +89,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
               </svg>
             </div>
-            <h3 class="mt-6 font-semibold text-gray-900">Historial de consumo</h3>
+            <h3 class="mt-1 font-semibold text-gray-900">Historial de consumo</h3>
             <p class="mt-2 text-gray-600">Accede a un registro completo de los consumos energéticos de tus dispositivos a lo largo del tiempo.</p>
           </div>
 
@@ -99,7 +99,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 0 0 2.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 0 0-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75 2.25 2.25 0 0 0-.1-.664m-5.8 0A2.251 2.251 0 0 1 13.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C9.095 4.01 8.25 4.973 8.25 6.108V8.25m0 0H4.875c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V9.375c0-.621-.504-1.125-1.125-1.125H8.25ZM6.75 12h.008v.008H6.75V12Zm0 3h.008v.008H6.75V15Zm0 3h.008v.008H6.75V18Z" />
               </svg>
             </div>
-            <h3 class="mt-6 font-semibold text-gray-900">Reportes detallados</h3>
+            <h3 class="mt-1 font-semibold text-gray-900">Reportes detallados</h3>
             <p class="mt-2 text-gray-600">Genera reportes que muestran el consumo de cada dispositivo en gráficos claros y fáciles de interpretar.</p>
           </div>
         </div>
@@ -278,83 +278,82 @@
     </section>
 
     <!-- Footer -->
-<footer class="bg-gray-50 py-16">
-  <div class="p-4 container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
-    <div>
-      <a href="#" class="flex items-center mb-4">
-        <img class="h-10 w-auto" src="../../../assets/img/Lytics_New.png" alt="Your Company">
-      </a>
-      <p class="text-gray-500">Transforma tu hogar, optimiza tu energia.</p>
-      <p class="mt-4 flex items-center text-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"/>
-        </svg>
-        (+54) 011 4480-8900
-      </p>
-    </div>
-
-    <div>
-      <h6 class="text-gray-900 font-semibold mb-4">Recursos</h6>
-      <ul class="space-y-2">
-        <li><a href="#" class="text-gray-500 hover:text-primary">Nuestros Servicios</a></li>
-        <li><a href="#" class="text-gray-500 hover:text-primary">Nuestros Dispositivos</a></li>
-        <li><a href="#" class="text-gray-500 hover:text-primary">Estrategia de Usuario</a></li>
-      </ul>
-    </div>
-
-    <div>
-      <h6 class="text-gray-900 font-semibold mb-4">Nosotros</h6>
-      <ul class="space-y-2">
-        <li><a href="#" class="text-gray-500 hover:text-primary">Sobre Lytics</a></li>
-        <li><a href="#" class="text-gray-500 hover:text-primary">Contacto & Soporte</a></li>
-        <li><a href="#" class="text-gray-500 hover:text-primary">Preguntas Frecuentes</a></li>
-      </ul>
-    </div>
-
-    <div>
-      <h6 class="text-gray-900 font-semibold mb-4">Enlaces a nuestras redes</h6>
-      <ul class="flex space-x-4">
-        <!-- Instagram -->
-        <li>
-          <a href="https://www.instagram.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
-              <path d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z"></path>
-          </svg>
+    <footer class="bg-gray-50 py-16">
+      <div class="p-4 container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+        <div>
+          <a href="#" class="flex items-center mb-4">
+            <img class="h-10 w-auto" src="../assets/img/Lytics_New.png" alt="Your Company">
           </a>
-        </li>
+          <p class="text-gray-500">Transforma tu hogar, optimiza tu energia.</p>
+          <p class="mt-4 flex items-center text-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"/>
+            </svg>
+            (+54) 011 4480-8900
+          </p>
+        </div>
 
-        <!-- YouTube -->
-        <li>
-          <a href="https://www.youtube.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
-              <path d="M 15 4 C 10.814 4 5.3808594 5.0488281 5.3808594 5.0488281 L 5.3671875 5.0644531 C 3.4606632 5.3693645 2 7.0076245 2 9 L 2 15 L 2 15.001953 L 2 21 L 2 21.001953 A 4 4 0 0 0 5.3769531 24.945312 L 5.3808594 24.951172 C 5.3808594 24.951172 10.814 26.001953 15 26.001953 C 19.186 26.001953 24.619141 24.951172 24.619141 24.951172 L 24.621094 24.949219 A 4 4 0 0 0 28 21.001953 L 28 21 L 28 15.001953 L 28 15 L 28 9 A 4 4 0 0 0 24.623047 5.0546875 L 24.619141 5.0488281 C 24.619141 5.0488281 19.186 4 15 4 z M 12 10.398438 L 20 15 L 12 19.601562 L 12 10.398438 z"></path>
-          </svg>
-          </a>
-        </li>
+        <div>
+          <h6 class="text-gray-900 font-semibold mb-4">Recursos</h6>
+          <ul class="space-y-2">
+            <li><a href="#Services" class="text-gray-500 hover:text-primary">Nuestros Servicios</a></li>
+            <li><a href="#dispo" class="text-gray-500 hover:text-primary">Nuestros Dispositivos</a></li>
+          </ul>
+        </div>
 
-        <!-- X (Twitter) -->
-        <li>
-          <a href="https://www.twitter.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
-              <path d="M26.37,26l-8.795-12.822l0.015,0.012L25.52,4h-2.65l-6.46,7.48L11.28,4H4.33l8.211,11.971L12.54,15.97L3.88,26h2.65 l7.182-8.322L19.42,26H26.37z M10.23,6l12.34,18h-2.1L8.12,6H10.23z"></path>
+        <div>
+          <h6 class="text-gray-900 font-semibold mb-4">Nosotros</h6>
+          <ul class="space-y-2">
+            <li><a href="#primary" class="text-gray-500 hover:text-primary">Sobre Lytics</a></li>
+            <li><a href="#contac" class="text-gray-500 hover:text-primary">Contacto & Soporte</a></li>
+            <li><a href="#pregun" class="text-gray-500 hover:text-primary">Preguntas Frecuentes</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h6 class="text-gray-900 font-semibold mb-4">Enlaces a nuestras redes</h6>
+          <ul class="flex space-x-4">
+            <!-- Instagram -->
+            <li>
+              <a href="https://www.instagram.com/ly_tics/" target="_blank" class="text-gray-500 hover:text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+                  <path d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z"></path>
               </svg>
-          </a>
-        </li>
+              </a>
+            </li>
 
-        <!-- LinkedIn -->
-        <li>
-          <a href="https://www.linkedin.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="26" height="26" viewBox="0 0 26 26">
-              <path d="M 21.125 0 L 4.875 0 C 2.183594 0 0 2.183594 0 4.875 L 0 21.125 C 0 23.816406 2.183594 26 4.875 26 L 21.125 26 C 23.816406 26 26 23.816406 26 21.125 L 26 4.875 C 26 2.183594 23.816406 0 21.125 0 Z M 8.039063 22.070313 L 4 22.070313 L 3.976563 9.976563 L 8.015625 9.976563 Z M 5.917969 8.394531 L 5.894531 8.394531 C 4.574219 8.394531 3.722656 7.484375 3.722656 6.351563 C 3.722656 5.191406 4.601563 4.3125 5.945313 4.3125 C 7.289063 4.3125 8.113281 5.191406 8.140625 6.351563 C 8.140625 7.484375 7.285156 8.394531 5.917969 8.394531 Z M 22.042969 22.070313 L 17.96875 22.070313 L 17.96875 15.5 C 17.96875 13.910156 17.546875 12.828125 16.125 12.828125 C 15.039063 12.828125 14.453125 13.558594 14.171875 14.265625 C 14.066406 14.519531 14.039063 14.867188 14.039063 15.222656 L 14.039063 22.070313 L 9.945313 22.070313 L 9.921875 9.976563 L 14.015625 9.976563 L 14.039063 11.683594 C 14.5625 10.875 15.433594 9.730469 17.519531 9.730469 C 20.105469 9.730469 22.039063 11.417969 22.039063 15.046875 L 22.039063 22.070313 Z"></path>
+            <!-- YouTube -->
+            <li>
+              <a href="https://www.youtube.com/channel/UC31pMZY9UwQsRcBkAI02rAA" target="_blank" class="text-gray-500 hover:text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+                  <path d="M 15 4 C 10.814 4 5.3808594 5.0488281 5.3808594 5.0488281 L 5.3671875 5.0644531 C 3.4606632 5.3693645 2 7.0076245 2 9 L 2 15 L 2 15.001953 L 2 21 L 2 21.001953 A 4 4 0 0 0 5.3769531 24.945312 L 5.3808594 24.951172 C 5.3808594 24.951172 10.814 26.001953 15 26.001953 C 19.186 26.001953 24.619141 24.951172 24.619141 24.951172 L 24.621094 24.949219 A 4 4 0 0 0 28 21.001953 L 28 21 L 28 15.001953 L 28 15 L 28 9 A 4 4 0 0 0 24.623047 5.0546875 L 24.619141 5.0488281 C 24.619141 5.0488281 19.186 4 15 4 z M 12 10.398438 L 20 15 L 12 19.601562 L 12 10.398438 z"></path>
               </svg>
-          </a>
-        </li>
+              </a>
+            </li>
 
-      </ul>
-    </div>
+            <!-- X (Twitter) -->
+            <li>
+              <a href="https://x.com/Ly_tics" target="_blank" class="text-gray-500 hover:text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+                  <path d="M26.37,26l-8.795-12.822l0.015,0.012L25.52,4h-2.65l-6.46,7.48L11.28,4H4.33l8.211,11.971L12.54,15.97L3.88,26h2.65 l7.182-8.322L19.42,26H26.37z M10.23,6l12.34,18h-2.1L8.12,6H10.23z"></path>
+                  </svg>
+              </a>
+            </li>
 
-  </div>
-</footer>
+            <!-- LinkedIn -->
+            <li>
+              <a href="https://www.linkedin.com/in/lytics-app-7b4810332/" target="_blank" class="text-gray-500 hover:text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="26" height="26" viewBox="0 0 26 26">
+                  <path d="M 21.125 0 L 4.875 0 C 2.183594 0 0 2.183594 0 4.875 L 0 21.125 C 0 23.816406 2.183594 26 4.875 26 L 21.125 26 C 23.816406 26 26 23.816406 26 21.125 L 26 4.875 C 26 2.183594 23.816406 0 21.125 0 Z M 8.039063 22.070313 L 4 22.070313 L 3.976563 9.976563 L 8.015625 9.976563 Z M 5.917969 8.394531 L 5.894531 8.394531 C 4.574219 8.394531 3.722656 7.484375 3.722656 6.351563 C 3.722656 5.191406 4.601563 4.3125 5.945313 4.3125 C 7.289063 4.3125 8.113281 5.191406 8.140625 6.351563 C 8.140625 7.484375 7.285156 8.394531 5.917969 8.394531 Z M 22.042969 22.070313 L 17.96875 22.070313 L 17.96875 15.5 C 17.96875 13.910156 17.546875 12.828125 16.125 12.828125 C 15.039063 12.828125 14.453125 13.558594 14.171875 14.265625 C 14.066406 14.519531 14.039063 14.867188 14.039063 15.222656 L 14.039063 22.070313 L 9.945313 22.070313 L 9.921875 9.976563 L 14.015625 9.976563 L 14.039063 11.683594 C 14.5625 10.875 15.433594 9.730469 17.519531 9.730469 C 20.105469 9.730469 22.039063 11.417969 22.039063 15.046875 L 22.039063 22.070313 Z"></path>
+                  </svg>
+              </a>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+    </footer>
 
   </div>
 </body>
