--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -33,7 +33,6 @@
 
   </div>
 </div>
-
 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-6 px-3 " id="step5">
   <!-- Consumo (Voltaje) -->
   <div [ngClass]="{'h-screen w-screen fixed top-0 left-0 z-50': isExpanded1, 'relative': !isExpanded1 }" class="bg-white p-6 rounded-lg shadow-md" id="step6">
@@ -41,11 +40,11 @@
       <div>
         <div class="flex justify-start items-center space-x-2">
         <h2 class="text-2xl font-bold">Voltaje</h2>
-        <div class="tooltip" data-tip="hello">
+        <div class="tooltip tooltip-right" data-tip="El voltaje es la fuerza con la que se empuja la electricidad a través de los cables para alimentar tus dispositivos. Un voltaje estable es importante para evitar daños en los equipos, ya que reduce el riesgo de que se quemen o funcionen mal. En términos simples, piensa en el voltaje como la presión que mantiene la electricidad en movimiento.">
           <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
         </div>
         </div>
-        <p class="text-gray-500">El voltaje estándar es de 220 V y la frecuencia de la corriente alterna es de 50 Hz</p>
+        <p class="text-gray-500">Muestra la fuerza de la electricidad que llega a tus dispositivos.</p>
       </div>
       <button (click)="toggleExpand(1)" class="text-gray-500 hover:text-gray-800">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
@@ -66,12 +65,12 @@
     <div class="flex justify-between items-center">
       <div>
         <div class="flex justify-start items-center space-x-2">
-          <h2 class="text-2xl font-bold">Voltaje</h2>
-          <div class="tooltip" data-tip="hello">
+          <h2 class="text-2xl font-bold">Amperaje</h2>
+          <div class="tooltip tooltip-right" data-tip="El amperaje mide la cantidad de electricidad que está pasando por tus dispositivos en este momento. Es similar al caudal de agua en una tubería: cuanto mayor es el amperaje, más electricidad se está utilizando. Un aumento en el amperaje suele indicar que más dispositivos están en uso o que están funcionando a mayor potencia.">
             <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
           </div>
           </div>
-        <p class="text-gray-500">El amperaje es cuanta electricidad esta fluyendo por el sistema. </p>
+        <p class="text-gray-500">Indica cuánta electricidad está pasando por el sistema, como el flujo de agua en una tubería.</p>
       </div>
       <button (click)="toggleExpand(2)" class="text-gray-500 hover:text-gray-800">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
@@ -92,12 +91,12 @@
     <div class="flex justify-between items-center">
       <div>
         <div class="flex justify-start items-center space-x-2">
-          <h2 class="text-2xl font-bold">Voltaje</h2>
-          <div class="tooltip" data-tip="hello">
+          <h2 class="text-2xl font-bold">Watts</h2>
+          <div class="tooltip tooltip-right" data-tip="Los watts representan la cantidad de energía que estás consumiendo ahora mismo. Es como el combustible necesario para que tus aparatos funcionen. Cuantos más watts consumes, mayor es el consumo de energía en tiempo real. Esta medida te ayuda a entender cuánta electricidad están utilizando tus dispositivos en cada momento.">
             <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
           </div>
           </div>
-        <p class="text-gray-500">Los watts indican cuánta energía estás usando.</p>
+        <p class="text-gray-500">Muestra cuánta energía estás usando en este momento, similar al combustible que usan tus dispositivos.</p>
       </div>
       <button (click)="toggleExpand(3)" class="text-gray-500 hover:text-gray-800">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
@@ -112,18 +111,17 @@
               frameborder="0"></iframe>
     </div>
   </div>
-
   <!--  Factor de Potencia -->
   <div [ngClass]="{'h-screen w-screen fixed top-0 left-0 z-50': isExpanded4, 'relative': !isExpanded4 }" class="bg-white p-6 rounded-lg shadow-md" id="step9">
     <div class="flex justify-between items-center">
       <div>
         <div class="flex justify-start items-center space-x-2">
-          <h2 class="text-2xl font-bold">Voltaje</h2>
-          <div class="tooltip" data-tip="hello">
+          <h2 class="text-2xl font-bold">kWh</h2>
+          <div class="tooltip tooltip-right" data-tip="El kilovatio-hora (kWh) es una unidad que indica cuánta electricidad has utilizado acumuladamente durante un periodo específico. Piensa en él como una medida de consumo total, similar a los kilómetros que recorres en un coche. Esta métrica es útil para evaluar tu consumo general de energía y entender cuánto podrías gastar al final del mes.">
             <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
           </div>
           </div>
-        <p class="text-gray-500"> Indicador de cantidad de electricidad que usas durante un tiempo.</p>
+        <p class="text-gray-500">Indica la cantidad de electricidad que has usado durante un período. Es útil para entender tu consumo acumulado.</p>
       </div>
       <button (click)="toggleExpand(4)" class="text-gray-500 hover:text-gray-800">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
