--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -20,15 +20,14 @@
       [maxProgress]="100"
       [colorProgress]="'progress progress-error w-ful'"
     ></app-card-real-time>
-    <app-card-info id="step4"
+    <app-card-real-time id="step4"
       [iconClasses]="'fas fa-dollar-sign'"
-      [titleCard]="'Consumo Real'"
-      [dataCardProgress]="'Consumo $'"
+      [titleCard]="'Consumo'"
       [subtitleCard]="'Consumo $'"
-      [valueProgress]="25000"
-      [maxProgress]="30000"
+      [valueProgress]="10"
+      [maxProgress]="100"
       [colorProgress]="'progress progress-warning w-ful'"
-    ></app-card-info>
+    ></app-card-real-time>
 
 
   </div>
