--- a/frontend/src/app/core/card-real-time/card-real-time.component.html
+++ b/frontend/src/app/core/card-real-time/card-real-time.component.html
@@ -13,21 +13,14 @@
   <div class="mt-2">
     <h2 class="text-2xl font-bold">
       <div [ngSwitch]="tipoDato">
-        <!-- Si es humedad -->
-        <div *ngSwitchCase="'humidity'" class="text-2xl font-bold">{{ humidity || 'Cargando...' }}</div>
+        <h2 *ngSwitchCase="'humidity'" class="text-2xl font-bold">{{ humidity }}</h2>
 
-
-        <!-- Si es temperatura -->
         <h2 *ngSwitchCase="'temperature'" class="text-2xl font-bold">{{ temperature }}</h2>
 
-        <!-- Si es hora actual -->
         <h2 *ngSwitchCase="'horaActual'" class="text-2xl font-bold">{{ currenTime }}</h2>
 
+        <h2 *ngSwitchCase="'energy'" class="text-2xl font-bold">{{ totalEnergy.toFixed(2) }} kWh</h2>
 
-        <!-- Si es consumo
-        <h2 *ngSwitchCase="'consumo'" class="text-2xl font-bold">{{ consumo }}</h2>-->
-
-        <!-- Valor por defecto si no coincide con ninguno -->
         <h2 *ngSwitchDefault class="text-2xl font-bold">No hay datos disponibles</h2>
       </div>
 
