--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<header class="navbar bg-base-100 shadow-lg p-4 flex items-center justify-between">
+<header class="navbar bg-base-100 shadow-lg p-4 flex items-center justify-between top-0">
 
   <div>
     <button (click)="toggleSidebarState()" class="btn btn-ghost hidden lg:block">
@@ -11,22 +11,22 @@
   </div>
 
   <div class="flex items-center space-x-4">
-    <div class="select-container flex items-center bg-white rounded-lg p-4 shadow">
-      <img src="https://i.pinimg.com/736x/e6/86/70/e686703efbf7b2e7b70c243de81d9189.jpg" alt="Locación" class="w-6 h-6 mr-2">
+    <div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
+      <i class="px-1 fa-lg fa-solid fa-location-dot"></i>
       <div>
         <span class="text-sm font-semibold">Locacion</span>
-        <select class="border-none outline-none bg-transparent text-gray-500">
+        <select class="p-2 border-none outline-none bg-transparent text-gray-500">
           <option>Hogar 1</option>
           <option>Oficina</option>
         </select>
       </div>
     </div>
 
-    <div class="select-container flex items-center bg-white rounded-lg p-4 shadow">
-      <img src="https://assets-jpcust.jwpsrv.com/thumbnails/pvwp0p9y-720.jpg" alt="Dispositivo" class="w-6 h-6 mr-2">
+    <div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
+      <i class="px-1 fa-lg fa-solid fa-house-laptop"></i>
       <div>
         <span class="text-sm font-semibold">Dispositivo</span>
-        <select class="border-none outline-none bg-transparent text-gray-500">
+        <select class=" p-2 border-none outline-none bg-transparent text-gray-500">
           <option>LyticsHogar 1</option>
           <option></option>
         </select>
@@ -37,9 +37,7 @@
   <div class="flex items-center space-x-4">
     <a [routerLink]="['alerts']"  class="relative">
       <button class="btn btn-ghost relative">
-        <svg class="w-6 h-6 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0018 14.158V11a6.002 6.002 0 00-5-5.917V5a2 2 0 10-4 0v.083A6.002 6.002 0 004 11v3.159c0 .538-.214 1.055-.595 1.436L2 17h5m5 0v1a3 3 0 11-6 0v-1m6 0H9"/>
-        </svg>
+        <i class="fa-xl text-red-600 fa-solid fa-bell"></i>
         <!-- Globo de notificación con contador
         <span class="absolute top-0 right-0 bg-red-500 text-white text-xs font-bold w-5 h-5 rounded-full flex items-center justify-center">
           {{ notificationCount }}
@@ -50,8 +48,12 @@
 
     <div class="relative">
       <button class="flex items-center space-x-2">
-        <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="Usuario" class="w-8 h-8 rounded-full">
-        <span>FabricioY</span>
+        <div class="avatar placeholder">
+          <div class="bg-neutral text-neutral-content w-8 rounded-full">
+            <span class="text-3xl">A</span>
+          </div>
+        </div>
+        <span>Alejandro</span>
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
         </svg>
