--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -51,7 +51,7 @@
         </svg>
       </button>
       <dialog id="my_modal_4" class="modal">
-        <div class="modal-box">
+        <div class="modal-box w-11/12 max-w-5xl">
           <h2 class="text-2xl font-bold pb-2">Voltaje</h2>
           <div class="">
             <form method="dialog">
@@ -95,8 +95,8 @@
         </svg>
       </button>
       <dialog id="my_modal_3" class="modal">
-        <div class="modal-box">
-          <h2 class="text-2xl font-bold pb-2">Amperaje</h2>
+        <div class="modal-box w-11/12 max-w-5xl">
+          <h2 class="text-2xl font-bold pb-2 w-11/12 max-w-5xl">Amperaje</h2>
           <div class="">
             <form method="dialog">
               <iframe src="http://localhost:3000/d-solo/de09ym86tk2rkf/current?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
@@ -140,7 +140,7 @@
         </svg>
       </button>
       <dialog id="my_modal_1" class="modal">
-        <div class="modal-box">
+        <div class="modal-box w-11/12 max-w-5xl">
           <h2 class="text-2xl font-bold pb-2">Watts</h2>
           <div class="">
             <form method="dialog">
@@ -184,7 +184,7 @@
         </svg>
       </button>
       <dialog id="my_modal_2" class="modal">
-        <div class="modal-box">
+        <div class="modal-box w-11/12 max-w-5xl">
           <h2 class="text-2xl font-bold pb-2">kWh</h2>
           <div class="">
             <form method="dialog">
