--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -53,7 +53,7 @@
     </div>
     <!-- Iframe -->
     <div class="mt-4">
-      <iframe src="http://localhost:3000/d-solo/ee09ykb533ncwf/voltage?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
+      <iframe src="http://lytics.dyndns.org:3000/d-solo/ee09ykb533ncwf/voltage?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
               width="100%"
               height="300"
               frameborder="0"></iframe>
@@ -79,7 +79,7 @@
 
     </div>
     <div class="mt-4">
-      <iframe src="http://localhost:3000/d-solo/de09ym86tk2rkf/current?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
+      <iframe src="http://lytics.dyndns.org:3000/d-solo/de09ym86tk2rkf/current?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
               width="100%"
               height="300"
               frameborder="0"></iframe>
@@ -104,7 +104,7 @@
       </button>
     </div>
     <div class="mt-4">
-      <iframe src="http://localhost:3000/d-solo/ae09ynm4xgrggd/power?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
+      <iframe src="http://lytics.dyndns.org:3000/d-solo/ae09ynm4xgrggd/power?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
               width="100%"
               height="300"
               frameborder="0"></iframe>
@@ -129,7 +129,7 @@
       </button>
     </div>
     <div class="mt-4">
-      <iframe src="http://localhost:3000/d-solo/fe09yozs0bl6od/energy?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
+      <iframe src="http://lytics.dyndns.org:3000/d-solo/fe09yozs0bl6od/energy?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
               width="100%"
               height="300"
               frameborder="0"></iframe>
