Apply multi device in front end, create dashboard panel, apply multi device in dashboard, alerts and configuration

--- a/frontend/src/app/routes/configuracion/configuracion.component.html
+++ b/frontend/src/app/routes/configuracion/configuracion.component.html
@@ -1,5 +1,5 @@
 
-<app-panel-title title="Selecciona el Perfil de tu casa" description="Selecciona el perfil que mejor describe tu hogar para obtener una configuración de consumo de energía personalizada."></app-panel-title>
+<app-panel-title [title]="title" description="Selecciona el perfil que mejor describe tu hogar para obtener una configuración de consumo de energía personalizada."></app-panel-title>
 
 
 <div class="container mx-auto py-4 px-10">
