--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
       <i *ngIf="!isSidebarOpen" class="fa-lg fa-solid fa-arrow-right"></i>
     </button>
     <button (click)="toggleSidebarState()" class="btn btn-ghost sm:block lg:hidden">
-    <i class="fa-lg fa-solid fa-bars "></i>
+      <i class="fa-lg fa-solid fa-bars"></i>
     </button>
   </div>
 
@@ -26,23 +26,20 @@
       <i class="px-1 fa-lg fa-solid fa-house-laptop"></i>
       <div>
         <span class="text-sm font-semibold">Dispositivo</span>
-        <select class=" p-2 border-none outline-none bg-transparent text-gray-500">
-          <option>LyticsHogar 1</option>
-          <option></option>
+        <select class=" p-2 border-none outline-none bg-transparent text-gray-500"
+                (change)="onDeviceChange($event)">
+          <option *ngFor="let device of devices" [value]="device.deviceId">
+            {{ device.deviceId }}
+          </option>
         </select>
       </div>
     </div>
   </div>
 
-  <div class="flex items-center space-x-4">
-    <a [routerLink]="['alerts']"  class="relative">
+    <div class="flex items-center space-x-4">
+    <a [routerLink]="['alerts']" class="relative">
       <button class="btn btn-ghost relative">
         <i class="fa-xl text-red-600 fa-solid fa-bell"></i>
-        <!-- Globo de notificación con contador
-        <span class="absolute top-0 right-0 bg-red-500 text-white text-xs font-bold w-5 h-5 rounded-full flex items-center justify-center">
-          {{ notificationCount }}
-        </span>
-         -->
       </button>
     </a>
 
@@ -58,7 +55,6 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
         </svg>
       </button>
-
 
       <div class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg py-2 hidden group-hover:block">
         <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Perfil</a>
