se corrigen 4 palabras que no tenian acentos se descargo plugin Spanish - Code Spell Checker para chequear ortografia

--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -54,7 +54,7 @@
       <li class="p-1">
         <a [routerLink]="['guides']" class="block p-2 rounded hover:bg-gray-300 transition" title="Guias y tutoriales">
           <i class="inline-block w-5 h-5 p-1 fa-lg fa-solid fa-book"></i>
-          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Guias y tutoriales</span>
+          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Guías y tutoriales</span>
         </a>
       </li>
     </ul>
@@ -65,13 +65,13 @@
       <li class="p-1">
         <a [routerLink]="['misuscription']" class="block p-2 rounded hover:bg-gray-300 transition" title="Mi Suscripcion">
           <i class="inline-block w-5 h-5 p-1 fa-lg fa-solid fa-credit-card"></i>
-          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Mi Suscripcion</span>
+          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Mi Suscripción</span>
         </a>
       </li>
       <li class="p-1">
         <a [routerLink]="['configuracion']" class="block p-2 rounded hover:bg-gray-300 transition" title="Configuracion">
           <i class="inline-block w-5 h-5 p-1 fa-lg fa-solid fa-cog"></i>
-          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Configuracion</span>
+          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Configuración</span>
         </a>
       </li>
       <li class="p-1">
