--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
     <div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
       <i class="px-1 fa-lg fa-solid fa-location-dot"></i>
       <div>
-        <span class="text-sm font-semibold">Locacion</span>
+        <span class="text-sm font-semibold">Locación</span>
         <select class="p-2 border-none outline-none bg-transparent text-gray-500">
           <option>Hogar 1</option>
           <option>Oficina</option>
