--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -17,7 +17,7 @@
   </div>
   <!-- Información principal y progreso -->
   <div class="mt-2">
-    <h2 class="text-2xl font-bold">{{ dataCardProgress }}</h2>
+    <h2 class="text-2xl font-bold">{{ dataCardProgress }} {{unit}}</h2>
     <div *ngIf="showProgress" class="flex items-center justify-between mt-1">
       <progress [ngClass]="colorProgress" value="{{ valueProgress }}" max="{{ maxProgress }}" class="progress-bar"></progress>
       <span class="text-xs ml-2" [ngClass]="percentageClass">{{ valueProgress }}%</span>
